Fix CardLink styling in dark mode.

--- a/src/components/CardLink/styles.module.css
+++ b/src/components/CardLink/styles.module.css
@@ -4,6 +4,10 @@
   outline: 1px solid var(--ifm-color-primary-lightest);
 }
 
+[data-theme='dark'] .card {
+  outline: 1px solid var(--ifm-color-primary-darkest);
+}
+
 .card:hover {
   text-decoration: none;
   outline: 4px solid var(--ifm-color-primary);
